# CrewAI

./: README.md
Best-Stock-Picking-Agent/: README.md  pyproject.toml
Best-Stock-Picking-Agent/src/trading/: crew.py  main.py
best_trading_agent/: README.md  pyproject.toml
best_trading_agent/memory/: chroma.sqlite3  long_term_memory_storage.db
best_trading_agent/output/: research_report.json  trending_companies.json
best_trading_agent/src/best_trading_agent/: crew.py  main.py
best_trading_agent/src/best_trading_agent/config/: agents.yaml
engineering_crew/: README.md  pyproject.toml
engineering_crew/output/: accounts.py  accounts.py_design.md  app.py
engineering_crew/src/engineering_crew/: crew.py  main.py
engineering_crew/src/engineering_crew/config/: agents.yaml
my_project/: README.md  pyproject.toml  report.md
my_project/src/my_project/: crew.py  main.py
my_project/src/my_project/config/: agents.yaml
