[project]
name = "trading"
version = "0.1.0"
description = "trading using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
trading = "trading.main:run"
run_crew = "trading.main:run"
train = "trading.main:train"
replay = "trading.main:replay"
test = "trading.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
