[project]
name = "best_trading_agent"
version = "0.1.0"
description = "Best-Trading-Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
best_trading_agent = "best_trading_agent.main:run"
run_crew = "best_trading_agent.main:run"
train = "best_trading_agent.main:train"
replay = "best_trading_agent.main:replay"
test = "best_trading_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
