[project]
name = "engineering_crew"
version = "0.1.0"
description = "Engineering-Crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
engineering_crew = "engineering_crew.main:run"
run_crew = "engineering_crew.main:run"
train = "engineering_crew.main:train"
replay = "engineering_crew.main:replay"
test = "engineering_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
