[project]
name = "my_project"
version = "0.1.0"
description = "my-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
my_project = "my_project.main:run"
run_crew = "my_project.main:run"
train = "my_project.main:train"
replay = "my_project.main:replay"
test = "my_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
